--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -23,7 +23,7 @@
             android:id="@+id/sendQuery"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/search_btn" />
+            android:text="@string/search" />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
